Clarify test text

--- a/Subsampling_Internet_English.ipynb
+++ b/Subsampling_Internet_English.ipynb
@@ -6,7 +6,7 @@
       "name": "Subsampling Internet English.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyAUvNMsI7RuoVnL4sWSmP",
+      "authorship_tag": "ABX9TyNZw2a63GsVNp+O+uH9ibJs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,8 +162,8 @@
         "print(\"Count of least common word: \", smallestCount)  # should be 12711, the count for 'golgw'\r\n",
         "print(\"Proportion of words that are the least common word: \", smallestCount/totalCount)\r\n",
         "\r\n",
-        "print(\"Three random words: \", chooseNWords(3))\r\n",
-        "print(\"Another three random words: \", chooseNWords(3))"
+        "print(\"Three random words (weighted by frequency): \", chooseNWords(3))\r\n",
+        "print(\"Another three random words (weighted by frequency): \", chooseNWords(3))"
       ],
       "execution_count": 100,
       "outputs": [
